--- a/playground-series-s3e2/playground_series_s3e2.ipynb
+++ b/playground-series-s3e2/playground_series_s3e2.ipynb
@@ -383,52 +383,52 @@
         }
       ],
       "source": [
-        "def calc_skew_kurtosis(num_features):\n",
-        "  print(f'calc_skew_kurtosis({num_features})')\n",
-        "  skew_values = []\n",
-        "  kurtosis_values = []\n",
+        "# def calc_skew_kurtosis(num_features):\n",
+        "#   print(f'calc_skew_kurtosis({num_features})')\n",
+        "#   skew_values = []\n",
+        "#   kurtosis_values = []\n",
         "\n",
-        "  for feature in num_features:\n",
+        "#   for feature in num_features:\n",
         "\n",
-        "    skew_values.append(train_df[feature].skew())\n",
-        "    kurtosis_values.append(train_df[feature].kurt())\n",
+        "#     skew_values.append(train_df[feature].skew())\n",
+        "#     kurtosis_values.append(train_df[feature].kurt())\n",
         "\n",
-        "  print(f': {len(skew_values)}')\n",
-        "  print(f': {len(kurtosis_values)}')\n",
+        "#   print(f': {len(skew_values)}')\n",
+        "#   print(f': {len(kurtosis_values)}')\n",
         "  \n",
-        "  skew_kurt_df = pd.DataFrame({'skew':np.abs(skew_values), 'kurtosis':np.abs(kurtosis_values), 'feature_name':num_features})\n",
-        "  skew_kurt_df.sort_values(by='skew', ascending=False).head(6)\n",
+        "#   skew_kurt_df = pd.DataFrame({'skew':np.abs(skew_values), 'kurtosis':np.abs(kurtosis_values), 'feature_name':num_features})\n",
+        "#   skew_kurt_df.sort_values(by='skew', ascending=False).head(6)\n",
         "\n",
-        "  features_with_skew = ((skew_kurt_df[skew_kurt_df['skew'] > .99])['feature_name']).tolist()\n",
-        "  features_with_kurtosis  = ((skew_kurt_df[skew_kurt_df['kurtosis'] > .99])['feature_name']).tolist()\n",
+        "#   features_with_skew = ((skew_kurt_df[skew_kurt_df['skew'] > .99])['feature_name']).tolist()\n",
+        "#   features_with_kurtosis  = ((skew_kurt_df[skew_kurt_df['kurtosis'] > .99])['feature_name']).tolist()\n",
         "\n",
-        "  print(f'features_with_skew: {features_with_skew}') \n",
-        "  print(f'features_with_kurtosis: {features_with_kurtosis}')\n",
-        "  display(skew_kurt_df.sort_values(by='kurtosis', ascending=False).head(5))\n",
+        "#   print(f'features_with_skew: {features_with_skew}') \n",
+        "#   print(f'features_with_kurtosis: {features_with_kurtosis}')\n",
+        "#   display(skew_kurt_df.sort_values(by='kurtosis', ascending=False).head(5))\n",
         "\n",
-        "calc_skew_kurtosis(NUM_FEATURES)"
+        "# calc_skew_kurtosis(NUM_FEATURES)"
       ],
       "id": "EgrPY1sI2Jbt"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "yNyyyQ8Y2Je4"
       },
       "outputs": [],
       "source": [
-        "NUM_FEATURES_2 = NUM_FEATURES.copy()\n",
-        "NUM_FEATURES_2.append('log_avg_glucose_level')\n",
-        "train_df['log_avg_glucose_level'] = np.log(train_df['avg_glucose_level'])\n",
+        "# NUM_FEATURES_2 = NUM_FEATURES.copy()\n",
+        "# NUM_FEATURES_2.append('log_avg_glucose_level')\n",
+        "# train_df['log_avg_glucose_level'] = np.log(train_df['avg_glucose_level'])\n",
         "\n",
-        "NUM_FEATURES_2.append('boxcox_avg_glucose_level')\n",
-        "train_df['boxcox_avg_glucose_level'] = boxcox(train_df['avg_glucose_level'])[0]\n",
+        "# NUM_FEATURES_2.append('boxcox_avg_glucose_level')\n",
+        "# train_df['boxcox_avg_glucose_level'] = boxcox(train_df['avg_glucose_level'])[0]\n",
         "\n",
-        "# train_df\n",
+        "# # train_df\n",
         "\n",
-        "print(f'NUM_FEATURES_2: {NUM_FEATURES_2}')\n",
-        "calc_skew_kurtosis(NUM_FEATURES_2)"
+        "# print(f'NUM_FEATURES_2: {NUM_FEATURES_2}')\n",
+        "# calc_skew_kurtosis(NUM_FEATURES_2)"
       ],
       "id": "yNyyyQ8Y2Je4"
     },
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "JUhTjtCjm3wh"
       },
@@ -456,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 37,
       "metadata": {
         "id": "m8f50qFuIksl"
       },
@@ -539,14 +539,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 38,
       "metadata": {
         "id": "xIdWH_06mtFK",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "badca00f-c39f-4607-ce13-2d25c2730aa1"
+        "outputId": "240932c4-7180-44c8-fb84-4aed3e32ae8c"
       },
       "outputs": [
         {
@@ -560,7 +560,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 38
         }
       ],
       "source": [
@@ -581,14 +581,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 39,
       "metadata": {
         "id": "QJ81olgHAgen",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 758
         },
-        "outputId": "4f5d57db-864a-485b-d1b6-df200bdfe4af"
+        "outputId": "bbe8bdc8-8a5d-4bca-b40b-ec9553c8f8ce"
       },
       "outputs": [
         {
@@ -707,7 +707,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-810c3871-7d43-4653-80fe-80c9be5cb21f\">\n",
+              "  <div id=\"df-863b14c8-f875-4201-9eb3-3ecff8ec4811\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1150,7 +1150,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-810c3871-7d43-4653-80fe-80c9be5cb21f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-863b14c8-f875-4201-9eb3-3ecff8ec4811')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1201,12 +1201,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-810c3871-7d43-4653-80fe-80c9be5cb21f button.colab-df-convert');\n",
+              "          document.querySelector('#df-863b14c8-f875-4201-9eb3-3ecff8ec4811 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-810c3871-7d43-4653-80fe-80c9be5cb21f');\n",
+              "          const element = document.querySelector('#df-863b14c8-f875-4201-9eb3-3ecff8ec4811');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1229,7 +1229,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 39
         }
       ],
       "source": [
@@ -1240,13 +1240,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 40,
       "metadata": {
         "id": "2JDUZ3ycPTed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1f4bc362-7bad-46f0-9f0d-d3a3785635bc"
+        "outputId": "d565629e-3a14-49ae-e25f-73364d4ef53f"
       },
       "outputs": [
         {
@@ -1312,14 +1312,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 41,
       "metadata": {
         "id": "zk9tINPfZKbg",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 263
         },
-        "outputId": "767f6f1a-ba53-41c2-8880-6f3ddff96efc"
+        "outputId": "59506f5a-38c0-474e-c7e7-78d25987a420"
       },
       "outputs": [
         {
@@ -1343,7 +1343,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d726f872-228e-4e00-8d40-6de6385fe47e\">\n",
+              "  <div id=\"df-6b8f3b90-651e-4053-95f1-ad49ba101473\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1396,7 +1396,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d726f872-228e-4e00-8d40-6de6385fe47e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b8f3b90-651e-4053-95f1-ad49ba101473')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1447,12 +1447,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d726f872-228e-4e00-8d40-6de6385fe47e button.colab-df-convert');\n",
+              "          document.querySelector('#df-6b8f3b90-651e-4053-95f1-ad49ba101473 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d726f872-228e-4e00-8d40-6de6385fe47e');\n",
+              "          const element = document.querySelector('#df-6b8f3b90-651e-4053-95f1-ad49ba101473');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1475,7 +1475,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 41
         }
       ],
       "source": [
@@ -1506,7 +1506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 42,
       "metadata": {
         "id": "2sR7BA2goA54"
       },
@@ -1532,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 43,
       "metadata": {
         "id": "Lh6Z_8CLhv_M"
       },
@@ -1563,7 +1563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 44,
       "metadata": {
         "id": "AUL3NZsohwBy"
       },
@@ -1601,13 +1601,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 45,
       "metadata": {
         "id": "9ay75cybvB8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86dac095-a2e5-4dbb-9e1f-6b5a6c17294b"
+        "outputId": "771ef96a-7284-4bcb-be77-22a8ddca5844"
       },
       "outputs": [
         {
@@ -1629,26 +1629,26 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 45
         }
       ],
       "source": [
         "X_train, X_test, y_train, y_test, X_score = get_encoded_dataframes()\n",
         "\n",
-        "X_train.columns, X_score.columns"
+        "# X_train.columns, X_score.columns"
       ],
       "id": "9ay75cybvB8d"
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 46,
       "metadata": {
         "id": "aIluk4l8AfTm",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 319
         },
-        "outputId": "74661d6d-64d9-4f5a-a4bb-eb7685c7dbf7"
+        "outputId": "20f2eb8d-538b-45df-bd78-5cec80ee1442"
       },
       "outputs": [
         {
@@ -1697,7 +1697,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-caa43637-b99a-406e-994d-8211502fd59d\">\n",
+              "  <div id=\"df-a09f85a6-9540-4e45-b459-99679e4ded2e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1853,7 +1853,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-caa43637-b99a-406e-994d-8211502fd59d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a09f85a6-9540-4e45-b459-99679e4ded2e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1904,12 +1904,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-caa43637-b99a-406e-994d-8211502fd59d button.colab-df-convert');\n",
+              "          document.querySelector('#df-a09f85a6-9540-4e45-b459-99679e4ded2e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-caa43637-b99a-406e-994d-8211502fd59d');\n",
+              "          const element = document.querySelector('#df-a09f85a6-9540-4e45-b459-99679e4ded2e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1932,7 +1932,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 46
         }
       ],
       "source": [
@@ -1946,13 +1946,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LDtIc-PGhwD7",
-        "outputId": "58b5bdad-ada5-4eea-8b1a-5d95c3def2c7"
+        "outputId": "d6fc8c41-503a-4141-b274-058916d9f010"
       },
       "outputs": [
         {
@@ -2031,13 +2031,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 48,
       "metadata": {
         "id": "IZLMfhyWhwGe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc684367-0589-431c-b38c-bf7146e25850"
+        "outputId": "b9063aaa-572d-4680-85cc-540c1db28437"
       },
       "outputs": [
         {
@@ -2067,13 +2067,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 49,
       "metadata": {
         "id": "XUQTh1TVPTYd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35ce475d-ab6d-4026-bbdc-e0289c5b1cdb"
+        "outputId": "cb8b5355-cfca-4947-fa11-5c86db09dcd4"
       },
       "outputs": [
         {
@@ -2108,7 +2108,7 @@
         "id": "6z8HbIGDOhaP"
       },
       "id": "6z8HbIGDOhaP",
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     }
   ],
